Custom Video Player Complete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             font-family: sans-serif;
             font-size: 16px;
             margin-left: 4%;
+            background: linear-gradient(to right, #a18cd1, #fbc2eb);
         }
         ul{
             list-style: none;
@@ -17,19 +18,20 @@
         a{
             text-decoration: none;
             margin-bottom: 8px;
+            color: white;
         }
     </style>
 </head>
 <body>
     
-    <h1>HTML, CSS PROJECTS</h1>
+    <h1>HTML, CSS JS PROJECTS</h1>
 
     <ul>
         <li><a href="Signup form/index.html">Sign Up Page</a></li>
 
         <li><a href="Movie Seat Selection/index.html">Movie Seat Selection</a></li>
 
-        <li><a href=""></a></li>
+        <li><a href="Custom Video Player/index.html">Custom Video Player</a></li>
     </ul>
 </body>
 </html>
