--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <li><a href="Movie Seat Selection/index.html">Movie Seat Selection</a></li>
 
         <li><a href="Custom Video Player/index.html">Custom Video Player</a></li>
+
+        <li><a href="DOM Array Methods/index.html">DOM Array Methods</a></li>
     </ul>
 </body>
 </html>
