--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <li><a href="Custom Video Player/index.html">Custom Video Player</a></li>
 
+        <li><a href="Custom Video Player/index.html">Exchange Rate Calculator</a></li>
+
         <li><a href="DOM Array Methods/index.html">DOM Array Methods</a></li>
     </ul>
 </body>
