--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         }
         a{
             text-decoration: none;
-            margin-bottom: 8px;
             color: white;
+        }
+        li{
+            margin-bottom: 5px;
         }
     </style>
 </head>
@@ -33,7 +35,7 @@
 
         <li><a href="Custom Video Player/index.html">Custom Video Player</a></li>
 
-        <li><a href="Custom Video Player/index.html">Exchange Rate Calculator</a></li>
+        <li><a href="Exchange Rate Calculator/index.html">Exchange Rate Calculator</a></li>
 
         <li><a href="DOM Array Methods/index.html">DOM Array Methods</a></li>
     </ul>
