--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <li><a href="Exchange Rate Calculator/index.html">Exchange Rate Calculator</a></li>
 
         <li><a href="DOM Array Methods/index.html">DOM Array Methods</a></li>
+
+        <li><a href="Landing Page/index.html">Landing Page</a></li>
     </ul>
 </body>
 </html>
