--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <li><a href="DOM Array Methods/index.html">DOM Array Methods</a></li>
 
         <li><a href="Landing Page/index.html">Landing Page</a></li>
+
+        <li><a href="Hangman/index.html">Hangman</a></li>
     </ul>
 </body>
 </html>
