Complete Meal Generator

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <li><a href="Landing Page/index.html">Landing Page</a></li>
 
         <li><a href="Hangman/index.html">Hangman</a></li>
+
+        <li><a href="Meal Generator/index.html">Meal Generator</a></li>
     </ul>
 </body>
 </html>
