--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <li><a href="Hangman/index.html">Hangman</a></li>
 
         <li><a href="Meal Generator/index.html">Meal Generator</a></li>
+
+        <li><a href="Expense Tracker/index.html">Expense Tracker</a></li>
     </ul>
 </body>
 </html>
