--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <li><a href="Meal Generator/index.html">Meal Generator</a></li>
 
         <li><a href="Expense Tracker/index.html">Expense Tracker</a></li>
+
+        <li><a href="Music Player/index.html">Music Player</a></li>
+
     </ul>
 </body>
 </html>
