--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
         <li><a href="Music Player/index.html">Music Player</a></li>
 
+        <li><a href="Infinit Scrolling/index.html">Infinit Scrolling</a></li>
+
     </ul>
 </body>
 </html>
