Complete Typing Game

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
         <li><a href="Infinit Scrolling/index.html">Infinit Scrolling</a></li>
 
+        <li><a href="Typing Game/index.html">Typing Game</a></li>
+
     </ul>
 </body>
 </html>
