Complete Search Lyrics

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
         <li><a href="Web Speech/index.html">Web Speech</a></li>
 
+        <li><a href="Search Lyrics/index.html">Search Lyrics</a></li>
 
     </ul>
 </body>
