--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     
-    <h1>HTML, CSS JS PROJECTS</h1>
+    <h1>HTML CSS JS PROJECTS</h1>
 
     <ul>
         <li><a href="Signup form/index.html">Sign Up Page</a></li>
