--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
         <li><a href="Search Lyrics/index.html">Search Lyrics</a></li>
 
+        <li><a href="Books Review/index.html">Books Review</a></li>
+
     </ul>
 </body>
 </html>
