update style & js

--- a/Books Review/index.html
+++ b/Books Review/index.html
@@ -13,7 +13,7 @@
 
     <!-- Page Header contain login, logout & add book btn -->
     <header class="header" id="header">
-        <button class="add-book" id="add-book">Add Book</button>
+        <button class="btn add-book" id="add-book">Add Book</button>
         <button class="btn login" id="login">Login</button>
         <button class="btn login" id="logout" onclick="adminlogout()">Logout</button>
     </header>
@@ -65,7 +65,7 @@
             <i class="fa-solid fa-times close" id="close-add-book"></i>
             <h1>Add Book</h1>
 
-            <label for="book-iamge">Book Image</label>
+            <label for="book-image">Book Image</label>
             <div class="book-iamge-div">
                 <input type="file" id="book-image" placeholder="Upload image" accept="jpg">
             </div>
