--- a/Books Review/index.html
+++ b/Books Review/index.html
@@ -7,6 +7,7 @@
     <title>Books Review</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 </head>
 
 <body>
@@ -37,6 +38,7 @@
             </div>
         </div>-->
     </div>
+    <button class="scroll-top" id="scroll-top"><i class="fa-solid fa-chevron-up"></i></button>
 
     <!-- Login form for admin only -->
     <div class="login-container" id="login-container">
@@ -79,7 +81,11 @@
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+     <script src="script.js"></script>
 </body>
 
 </html>
