changes in index

--- a/Books Review/index.html
+++ b/Books Review/index.html
@@ -82,9 +82,7 @@
     </div>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    <script>AOS.init();</script>
      <script src="script.js"></script>
 </body>
 
